# example

./: BattleDialog.cpp  BattleDialog.h  CMakeLists.txt  Character.cpp  Character.h  EditCharacterDialog.cpp  EditCharacterDialog.h  Enemy.cpp  Enemy.h  GameManager.cpp  GameManager.h  InventoryDialog.cpp  InventoryDialog.h  Item.cpp  Item.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  MapDialog.cpp  MapDialog.h  README.md  SFMLMapRenderer.cpp  SFMLMapRenderer.h  SFMLMapWindow.cpp  SFMLMapWindow.h  Shop.cpp  Shop.h  ShopDialog.cpp  ShopDialog.h  Task.cpp  Task.h  TaskDetailDialog.cpp  TaskDetailDialog.h  Utils.cpp  Utils.h  debug_map.txt  main.cpp
Resources/: 1 (1).tiled-session  rpg.tmx  tileset1.tsx  tileset2.tsx  tileset3.tsx  tileset4.tsx  tileset5.tsx
include/: Character.h  GameManager.h  Item.h  Shop.h  Task.h
